--- a/svc-pod-1.yaml
+++ b/svc-pod-1.yaml
@@ -5,8 +5,10 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 80
+    - port: 80
     #targetPort: 80
     nodePort: 30000 
   selector:
     app: primeiro-pod
+
+    /*Com o nodePort você mostra a aponta diretamente a porta utilizada*/
