--- a/portal-noticias.yaml
+++ b/portal-noticias.yaml
@@ -3,10 +3,13 @@ kind: Pod
 metadata:
   name: portal-noticias
   labels:
-    app:  portal-noticias
+    app: portal-noticias
 spec:
   containers:
     - name: portal-noticias-container
       image: aluracursos/portal-noticias:1
       ports:
-        - containerPort: 80 
+        - containerPort: 80
+      envFrom:
+        - configMapRef:
+            name: portal-configmap
